# histomoe

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  api.py  app.py  evaluate.py  package_for_kaggle.ps1  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  task.txt  train.py
configs/: default.yaml
configs/data/: ccrcc.yaml  multi_cancer.yaml  synthetic.yaml
configs/model/: baseline.yaml  histomoe_resnet50.yaml  histomoe_vit.yaml
configs/trainer/: cpu.yaml  gpu.yaml
examples/: train_synthetic.py
histomoe/: __init__.py
histomoe/data/: __init__.py  datamodule.py  metadata_utils.py  patch_dataset.py  st_dataset.py  transforms.py
histomoe/models/: __init__.py  baselines.py  expert.py  gating_network.py  histomoe_model.py  moe_layer.py  text_encoder.py  vision_encoder.py
histomoe/training/: __init__.py  callbacks.py  losses.py  metrics.py
histomoe/utils/: __init__.py  config.py  io.py  logger.py  seed.py
histomoe/visualization/: __init__.py  attention_viz.py  gene_expression_viz.py  routing_viz.py
notebooks/: HistoMoE_Demo.ipynb
tests/: conftest.py  test_data.py  test_gating.py  test_metrics.py  test_models.py
